CMF 1.5.7-beta (unreleased)

  Bug Fixes

    - CMFCore.CatalogTool:  Removed import of LOG object from ZCatalog in
     favor of the new 'logger' pattern using Python's logging module.

    - Forward-ported fix for DCWorkflow global actions missing IDs
      (http://www.zope.org/Collectors/CMF/308).

    - CMFCore Expression: Fixed 'request' provided by expression contexts.
      'request' was not set correctly if 'object' is not specified.

    - CMFCore.interfaces.portal_workflow: Corrected the API given for
      WorkflowDefinition.isActionSupported.
      (http://www.zope.org/Collectors/CMF/407)

    - A re-used variable name led to rendering errors in some cases
      (http://www.zope.org/Collectors/CMF/411)

    - The line-endings problem fixed for file-based PythonScripts applies to
      multi-line python code in file-based PageTemplates as well. The same
      fix (universal line-endings support) is now used here too.
      (http://www.zope.org/Collectors/CMF/403)

CMF 1.5.6 (2006/02/26)
  
  Bug Fixes

    - In certain circumstances file-based PythonScripts with foreign line
      endings were not handled correctly. PythonScripts are now read using
      Python's universal line-endings support.
      (http://www.zope.org/Collectors/CMF/403)
      
CMF 1.5.6-beta (2006/02/19)

  Bug Fixes

    - CMFDefault.DiscussionTool: Ensure that isDiscussionAllowedFor will
      not accidentally acquire discussion settings from the content 
      object's parent.
      (http://www.zope.org/Collectors/CMF/398)

    - CMFDefault.RegistrationTool: Adding single quotes to the allowed
      characters in the local part of an email address.
      (http://www.zope.org/Collectors/CMF/401)

    - CMFCore.FSPythonScript: FSPythonScripts forgot to add __file__ to
      the script globals. This broke warnings.warn() when a stacklevel
      argument pointing into the script was passed (2).

    - CMFSetup.workflow: Workflows managing no permissions at all could